--- a/styles/css-vars.scss
+++ b/styles/css-vars.scss
@@ -1,1 +1,7 @@
 // you can custom css vars here
+:root {
+  /* 背景图片 */
+  --yun-bg-img: url("https://s11.ax1x.com/2022/07/21/jqsay8.png");
+  /* 侧边栏背景图片 */
+  --yun-sidebar-bg-img: url("https://cdn.yunyoujun.cn/img/bg/alpha-stars-timing-1.webp");
+}
